add: now there is suggestion when start searching

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
       <div class="search" role="search">
         <input type="text" autocomplete="off" name="search" id="search" placeholder="Search for a city..."
           aria-label="Enter city name for weather search">
+        <div class="suggestion hidden">
+          <div class="suggestion-list" id="suggestion-list" role="listbox" aria-label="Search suggestions">
+          </div>
+        </div>
         <div class="recent hidden">
           <div class="recent-header" role="group" aria-labelledby="recent-label">
             <span class="recent-label">Recent</span>
